# piis_ss26

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  ideas.md  pyproject.toml
deploy/: entrypoint.sh  jupyter_server_config.py  requirements.txt
docs/: architecture.md  deployment.md  extension.md
examples/: 01_explore.ipynb  02_model.ipynb  03_messy_on_purpose.ipynb  README.md
jupyterlab_extensions/piis-assistant/: README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
jupyterlab_extensions/piis-assistant/jupyterlab_piis_assistant/: __init__.py  activities.py  ai_backend.py  analyzer.py  criteria.py  gamification.py  handlers.py  profile_store.py  progress_store.py  settings.py
jupyterlab_extensions/piis-assistant/src/: ReactWidget.ts  anim.ts  api.ts  avatarAssistant.ts  avatarAssistant.tsx  cellDecorations.ts  cellDecorations.tsx  commands.ts  flowySprite.ts  handbookPanel.ts  handbookPanel.tsx  icons.ts  index.ts  markdown.ts  notebookBanner.ts  notebookBanner.tsx  notebookContext.ts  notebookWiring.ts  questCells.ts  questCells.tsx  questState.ts  questStore.ts  settingsPanel.ts  sidebar.ts  (+6 more)
notebooks/: ai_enhanced_literate_programming_demo.ipynb
prototypes/multi_agent_notebook/: multi_agent_notebook_prototype.ipynb  multi_agent_notebook_support.py
prototypes/narrative_code_sync/: hf_openai_client.py  narrative_code_sync_prototype.ipynb  narrative_code_sync_support.py
prototypes/shared/: hf_openai_client.py  notebook_ui.py
scripts/: build_examples.py  setup.sh
(+40 files in other folders)
