[project]
name = "piis-ai-notebook-demo"
version = "0.1.0"
description = "Example notebook project for exploring AI-enhanced literate programming ideas."
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false