[project]
name = "flowquest-workspace"
version = "0.1.0"
description = "Workspace for FlowQuest — a gamified JupyterLab companion."
requires-python = ">=3.12"
dependencies = [
    # JupyterLab + the FlowQuest extension's runtime deps
    "ipykernel>=6.29.5",
    "jupyterlab>=4.5.0,<5",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
    # Notebook stack used by the example notebooks under examples/
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false
